# recipe-manager-eda-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
data/: recetas.txt
include/: category.hpp  constants.hpp  doubly_linked_list.hpp  ingredient.hpp  menu.hpp  recipe.hpp  recipe_list.hpp  singly_linked_list.hpp  storage.hpp
src/: main.cpp  menu.cpp  recipe.cpp  storage.cpp
tests/: test_doubly_linked_list.cpp  test_recipe_list.cpp  test_singly_linked_list.cpp  test_storage.cpp
